# JJJ

./: CMakeLists.txt  Makefile  README.md
src/: JJJ.hpp  dir.cpp  entry.hpp  excel.cpp  g.rc  g.res  gui.cpp  gui.fbp  gui.h  main.cpp  new.xls  rc_builder.pl  strip.cpp  tags  templ.cpp  template.xls
